# reverso-llm

./: .gitignore  .graphwikiignore  .rules.ts  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  prek.toml  pyproject.toml  release.json
.ai/: matrix.json
.ai/cascade/: README.md  cascade-plan.json
.ai/drift/: last-drift.json  last-generation.json  migration-manifest.json
.ai/evals/: README.md
.ai/handoff/: init-ai-repo-handoff.md
.ai/init/: repo-profile.json  sdlc-path.md
.ai/mcp/: a2a-handoff.md  registry.json
.ai/observability/: audit-checklist.md  conventions.md
.ai/policies/: model-routing.json
.ai/reviews/: ai-failure-modes.md
.ai/traceability/: graph.json  index.md  validation-report.md
.ai/validation/: report.md
.ai/work-intake/: README.md
.ai/workflows/: repo-workflow.json  repo-workflow.md
.github/workflows/: ci-prek.yml  ci.yml  release.yml
.memory/human-override/: README.md
.memory/learned/: README.md
.memory/self-learned/: README.md
.omc/context/: auggie-deepseek-responses-20260608T223519Z.md  responses-providers-20260608T214418Z.md
.omc/handoffs/: team-exec.md  team-plan.md  team-verify.md
.omc/interviews/: auggie-deepseek-responses-20260608T224423Z.md  responses-providers-20260608T215316Z.md
.omc/plans/: open-questions.md  prd-auggie-deepseek-responses.md  prd-codex-anthropic-oauth.md  prd-responses-providers.md  ralph-mvp-prd.json  ralplan-anthropic-api-surface.md  ralplan-auggie-deepseek-responses.md  ralplan-codex-anthropic-oauth.md  ralplan-codex-reverso-full-integration.md  ralplan-parity-gap-closure.md  ralplan-responses-providers.md  test-spec-auggie-deepseek-responses.md  test-spec-responses-providers.md
.omc/research/: auggie-indexing-spike.md  auggie-sdk-spike.md  auggie-streaming.md  codex-e2e-matrix-results.md  codex-model-picker.md  codex-resume-probe.md  (+3 more)
config/: config.yaml  litellm_config.yaml  models.yaml  tool_mappings.yaml
docs/: 01-brd.md  02-prd.md  03-architecture.md  04-mvp.md  AGENTS.md  anthropic-surface-verification.md
launchd/: com.user.reverso-daemon.plist.tmpl  com.user.reverso-proxy.plist.tmpl
scripts/: archgate.sh  codex-e2e-matrix.sh  install-launchagents.sh  keychain-set.sh  smoke.sh  smoke_anthropic_surface.sh  start-fg-proxy.sh  sync-upstream.sh  test-anthropic.sh  test-openai.sh  uninstall-launchagents.sh  validate-rules.sh
tests/: __init__.py
(+177 files in other folders)
