[project]
name = "reverso"
version = "0.1.0"
description = "Local LLM gateway wrapping Claude Code and Codex CLIs with session persistence"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0",
    "httpx",
    "pyyaml",
    "uvicorn",
    "psutil",
]

[project.scripts]
reverso-proxy = "reverso.proxy.main:main"
reverso-daemon = "reverso.daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reverso"]

[tool.hatch.metadata]
allow-direct-references = true
