[project]
name = "reverso"
version = "0.1.0"
description = "Local LLM gateway wrapping Claude Code and Codex CLIs with session persistence"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.86.2",
    "httpx",
    "fastapi",
    "pyyaml",
    "uvicorn",
    "websockets",
    "psutil",
    "headroom-ai==0.28.0",
]

[project.scripts]
reverso-proxy = "reverso.proxy.main:main"
reverso-daemon = "reverso.daemon.main:main"
reverso-codex-sync = "reverso.codex_sync:main"
reverso-claude-code-sync = "reverso.claude_code_sync:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with -m 'not integration')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reverso"]

[tool.hatch.metadata]
allow-direct-references = true
